--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -28,6 +28,10 @@ jobs:
 
     - name: Build
       run: go build -v .
+    
+    - uses: nijel/rabbitmq-action@v1.0.0
+      with:
+        rabbitmq version: '5'
 
     - name: Test
       run: go test -v ./...
