--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -29,7 +29,7 @@ jobs:
     - name: Build
       run: go build -v .
     
-    - uses: nijel/rabbitmq-action@v1.0.0
+    - uses: go-mq/rabbitmq-action@v1.0.0
 
     - name: Test
       run: go test -v ./...
