--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -7,29 +7,33 @@ on:
     branches: [ master ]
 
 jobs:
-
   build:
     name: Build
     runs-on: ubuntu-latest
-    steps:
-
-    - name: Set up Go 1.x
-      uses: actions/setup-go@v2
-      with:
-        go-version: ^1.13
-      id: go
-
-    - name: Check out code into the Go module directory
-      uses: actions/checkout@v2
-
-    - name: Get dependencies
-      run: |
-        go get -v -t -d ./...
-
-    - name: Build
-      run: go build -v .
+    services:
+      rabbitmq:
+        image: rabbitmq
+        ports:
+          - 5672:5672
     
-    - uses: go-mq/rabbitmq-action@v1.0.0
+    steps:
+      - name: Set up Go 1.x
+        uses: actions/setup-go@v2
+        with:
+          go-version: ^1.13
+        id: go
 
-    - name: Test
-      run: go test -v ./...
+      - name: Check out code into the Go module directory
+        uses: actions/checkout@v2
+
+      - name: Get dependencies
+        run: |
+          go get -v -t -d ./...
+
+      - name: Build
+        run: go build -v .
+
+      - uses: go-mq/rabbitmq-action@v1.0.0
+
+      - name: Test
+        run: go test -v ./...
