--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -13,11 +13,12 @@ jobs:
     services:
       rabbitmq:
         image: rabbitmq
+        options: --name rabbitmq
         ports:
           - 5672:5672
     
     steps:
-      - name: Set up Go 1.x
+      - name: Set up Go ^1.13
         uses: actions/setup-go@v2
         with:
           go-version: ^1.13
